package com.example.countdayleave.model

data class NotifyTime(
    val hour: Int,
    val minute: Int
)
