@startuml
class com.nvdung1607.countdayleave.notification.NotificationScheduler$Companion {
+  REQUEST_CODE
}

class com.nvdung1607.countdayleave.notification.NotificationScheduler {
-  alarmManager
+ void schedule(CountdownConfig)
+ void cancel()
- PendingIntent buildIntent()
- Long nextTriggerTime(Int,Int,Boolean)
}


class com.nvdung1607.countdayleave.data.CountdownDataStore$Companion {
-  KEY_MILESTONE_NAME
-  KEY_TARGET_EPOCH
-  KEY_NOTIFY_TIMES
-  KEY_NOTIFY_ENABLED
-  KEY_IS_CONFIGURED
}

class com.nvdung1607.countdayleave.data.CountdownDataStore {
+ Flow<CountdownConfig?> configFlow
+ void saveConfig(CountdownConfig)
+ void clearConfig()
}


class com.nvdung1607.countdayleave.notification.DailyNotificationReceiver$Companion {
+  CHANNEL_ID
+  NOTIFICATION_ID
+  ACTION_OPEN_CELEBRATION
}

class com.nvdung1607.countdayleave.notification.DailyNotificationReceiver {
+ void onReceive(Context,Intent)
- void sendNotification(Context,String,String,String)
}

class com.nvdung1607.countdayleave.model.CountdownConfig {
}
class com.nvdung1607.countdayleave.ui.theme.AppTheme {
+ AppColors colors
}

class com.nvdung1607.countdayleave.ui.components.Particle {
}
class com.nvdung1607.countdayleave.ui.components.FireworkBurst {
}
class com.nvdung1607.countdayleave.model.NotifyTime {
}
class com.nvdung1607.countdayleave.notification.BootReceiver {
+ void onReceive(Context,Intent)
}

class com.nvdung1607.countdayleave.Routes {
+  SETUP
+  COUNTDOWN
+  CELEBRATION
}

class com.nvdung1607.countdayleave.MainActivity {
-  notificationPermissionLauncher
+ void onCreate(Bundle?)
- String resolveStartDestination()
- void createNotificationChannel()
}


class com.nvdung1607.countdayleave.ui.theme.AppColors {
}
class com.nvdung1607.countdayleave.viewmodel.CountdownUiState {
}
class com.nvdung1607.countdayleave.viewmodel.CountdownViewModel {
-  dataStore
-  scheduler
-  _uiState
+ StateFlow<CountdownUiState> uiState
- Job? timerJob
+ void saveConfig(String,Long,List<NotifyTime>,Boolean)
+ void resetConfig()
- void startTimer()
+ void onCleared()
}




com.nvdung1607.countdayleave.notification.NotificationScheduler +.. com.nvdung1607.countdayleave.notification.NotificationScheduler$Companion
com.nvdung1607.countdayleave.data.CountdownDataStore +.. com.nvdung1607.countdayleave.data.CountdownDataStore$Companion
com.nvdung1607.countdayleave.notification.DailyNotificationReceiver +.. com.nvdung1607.countdayleave.notification.DailyNotificationReceiver$Companion
android.content.BroadcastReceiver <|-- com.nvdung1607.countdayleave.notification.DailyNotificationReceiver
android.content.BroadcastReceiver <|-- com.nvdung1607.countdayleave.notification.BootReceiver
androidx.activity.ComponentActivity <|-- com.nvdung1607.countdayleave.MainActivity
androidx.lifecycle.AndroidViewModel <|-- com.nvdung1607.countdayleave.viewmodel.CountdownViewModel
@enduml
